--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -14,7 +14,8 @@
     "@repo/ui": "*",
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@repo/db":"*"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -23,6 +24,9 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.27.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "tailwindcss": "^3.3.5",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   }
 }
