--- a/apps/bank_webhook_handler/package.json
+++ b/apps/bank_webhook_handler/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@repo/db":"*",
+    "@repo/db": "*",
     "@types/express": "^5.0.2",
     "esbuild": "^0.25.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prisma": "^6.9.0"
   }
 }
