--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,13 +6,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "@prisma/client": "^6.8.2"
+  "exports": {
+    "./client": "./dist/src/index.js"
   },
-  "exports":{
-    "./client":"./src/index.ts"
+  "dependencies": {
+    "@prisma/client": "^6.9.0",
+    "prisma": "^6.9.0"
   }
 }
